--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "apollo-angular": "^1.0.1",
+    "apollo-angular-link-http": "^1.0.2",
+    "apollo-cache-inmemory": "^1.1.12",
+    "apollo-client": "^2.2.8",
     "core-js": "^2.4.1",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.8.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -41,8 +47,8 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
-    "ts-node": "~5.0.0",
+    "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "~2.7.2"
   }
 }
