--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,15 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "baseUrl": "src",
+    "paths": {
+      "@reducers/*": [
+        "app/reducers/*"
+      ],
+      "@actions/*": [
+        "app/actions/*"
+      ]
+    }
   }
 }
